Grammer.txt
<statement>     -> <assignment> | <expression>
<assignment>    -> <identifier> = <expression>
<expression>    -> <term> (+|- <term>)*
<term>          -> <factor> (*|/ <factor>)*
<factor>        -> <integer> | <identifier> | '(' <expression> ')'

<identifier>    -> [a-zA-Z_][a-zA-Z0-9_]*
<integer>       -> [0-9]+
